--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # Modern terminal features:
 set -g mouse on
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Default is 2000
-set -g history-limit 20000
+set -g history-limit 50000
 
 # split panes using | and -
 bind | split-window -h
