--- a/.ssh/config
+++ b/.ssh/config
@@ -1,19 +1,17 @@
-Host github.com
-	IdentityFile ~/.ssh/id_rsa
-	#IdentitiesOnly yes
+Host *
+    ServerAliveInterval 25
 
-Host hpc
-	HostName login.hpc.dtu.dk
-	User s134832
+Host github.com
+    IdentityFile ~/.ssh/id_rsa
+    #IdentitiesOnly yes
 
 Host forside
     HostName ssh.phx.nearlyfreespeech.net
     User nicolais_forside
 
-host pfbitter
-    hostname ssh.phx.nearlyfreespeech.net
-    user nicolais_pfbitter
+Host pfbitter
+    HostName ssh.phx.nearlyfreespeech.net
+    User nicolais_pfbitter
 
 Host ssh.phx.nearlyfreespeech.net
     IdentityFile ~/.ssh/id_rsa
-
