--- a/.ssh/config
+++ b/.ssh/config
@@ -2,16 +2,19 @@ Host *
     ServerAliveInterval 25
 
 Host github.com
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_rsa-old
     #IdentitiesOnly yes
 
 Host forside
-    HostName ssh.phx.nearlyfreespeech.net
-    User nicolais_forside
+    HostName xn--sb-lka.org
+    User root
+
+Host pyjamas
+    HostName pyjam.as
+    User nsq
+    IdentityFile ~/.ssh/id_rsa-old
 
 Host pfbitter
     HostName ssh.phx.nearlyfreespeech.net
     User nicolais_pfbitter
-
-Host ssh.phx.nearlyfreespeech.net
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_rsa-old
