--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,3 +52,9 @@ bind p paste-buffer
 #setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 #setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
+
+# TPM plugins (`prefix + I` to install)
+# Install: git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+run '~/.tmux/plugins/tpm/tpm'
