--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,11 @@
 Host *
     ServerAliveInterval 25
 
+	# SSH Multiplexing
+	ControlPath ~/.ssh/controlmasters/%r@%h:%p
+	ControlMaster auto
+	ControlPersist 10m
+
 Host github.com
     IdentityFile ~/.ssh/id_rsa-old
     #IdentitiesOnly yes
@@ -9,10 +14,18 @@ Host forside
     HostName xn--sb-lka.org
     User root
 
+Host hetzner
+    HostName 95.216.212.222
+    User root
+
 Host pyjamas
     HostName pyjam.as
     User nsq
     IdentityFile ~/.ssh/id_rsa-old
+
+Host dtuhax
+	HostName 159.69.176.218
+	User root
 
 Host pfbitter
     HostName ssh.phx.nearlyfreespeech.net
