github: change ssh key

--- a/.ssh/config
+++ b/.ssh/config
@@ -7,7 +7,7 @@ Host *
 	ControlPersist 10m
 
 Host github.com
-    IdentityFile ~/.ssh/id_rsa-old
+    IdentityFile ~/.ssh/id_ed25519
     #IdentitiesOnly yes
 
 Host forside
