SSH: Set VerifyHostKeyDNS=yes

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,10 +1,13 @@
 Host *
     ServerAliveInterval 25
 
-	# SSH Multiplexing
-	ControlPath ~/.ssh/controlmasters/%r@%h:%p
-	ControlMaster auto
-	ControlPersist 10m
+    # Check SSHFP DNS record
+    VerifyHostKeyDNS yes
+
+    # SSH Multiplexing
+    ControlPath ~/.ssh/controlmasters/%r@%h:%p
+    ControlMaster auto
+    ControlPersist 10m
 
 Host github.com
     IdentityFile ~/.ssh/id_ed25519
@@ -24,8 +27,8 @@ Host pyjamas
     IdentityFile ~/.ssh/id_rsa-old
 
 Host dtuhax
-	HostName 159.69.176.218
-	User root
+    HostName 159.69.176.218
+    User root
 
 Host pfbitter
     HostName ssh.phx.nearlyfreespeech.net
