--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,5 @@
+Include config.d/*
+
 Host *
     ServerAliveInterval 25
 
@@ -8,10 +10,6 @@ Host *
     ControlPath ~/.ssh/controlmasters/%r@%h:%p
     ControlMaster auto
     ControlPersist 10m
-
-Host github.com
-    IdentityFile ~/.ssh/id_ed25519
-    #IdentitiesOnly yes
 
 Host forside
     HostName xn--sb-lka.org
