yarn noise, git LFS, apk get packages

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,12 @@
 [diff "bin"]
 	textconv = hexdump -v -C
 
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+
 [user]
 	email = git@xn--sb-lka.org
 	name = Nicolai Søborg
