kitty: keep cwd

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -144,7 +144,10 @@ color15  #d8d8d8
 ## Window management
 #map super+n             new_os_window
 #map super+w             close_window
+
 #map ctrl+shift+enter    new_window
+map ctrl+shift+enter    new_window_with_cwd
+
 #map ctrl+shift+]        next_window
 #map ctrl+shift+[        previous_window
 #map ctrl+shift+f        move_window_forward
