--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
 	lgp = log -p --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue) <%an>%Creset' --abbrev-commit
 	fixlocal = commit --amend
 	ws = "!git rebase --whitespace=fix --onto $(git merge-base HEAD @{u})"
-	moveprs = !echo "git branch ${1:-some-new-branch}" && echo 'git reset HEAD@{num-commits-back}' && echo "git checkout ${1:-some-new-branch}"
+	moveprs = !printf "git branch ${1:-some-new-branch}\ngit reset git reset --hard HEAD~1\ngit checkout ${1:-some-new-branch}"
 
 [diff "zip"]
 	textconv = unzip -v
