fix strace path, kitty keybindings, ssh hardening

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -171,6 +171,16 @@ map ctrl+tab           next_tab
 map alt+right          next_tab
 map ctrl+shift+tab     previous_tab
 map alt+left           previous_tab
+
+map ctrl+shift+left neighboring_window left
+map ctrl+shift+right neighboring_window right
+map ctrl+shift+up neighboring_window up
+map ctrl+shift+down neighboring_window down
+#map shift+left move_window right
+#map shift+right move_window left
+#map shift+up move_window down
+#map shift+down move_window up
+
 #map ctrl+shift+t        new_tab
 #map ctrl+shift+q        close_tab
 #map ctrl+shift+l        next_layout
