--- a/.ssh/config
+++ b/.ssh/config
@@ -1,15 +1,24 @@
 Include config.d/*
 
 Host *
+    Protocol 2
     ServerAliveInterval 25
 
     # Check SSHFP DNS record
     VerifyHostKeyDNS yes
 
+    # Fix terminfo for kitty:
+    SetEnv TERM=xterm-256color
+
+    # Remove bad ciphers from default list
+    HostKeyAlgorithms -ssh-rsa
+    # MACs without "-etm" will do mac-then-encrypt
+    MACs -umac-64-etm@openssh.com,hmac-sha1-etm@openssh.com,umac-64@openssh.com,umac-128@openssh.com,hmac-sha2-256,hmac-sha2-512,hmac-sha1
+
     # SSH Multiplexing
-    ControlPath ~/.ssh/controlmasters/%r@%h:%p
-    ControlMaster auto
-    ControlPersist 10m
+    #ControlPath ~/.ssh/controlmasters/%r@%h:%p
+    #ControlMaster auto
+    #ControlPersist 10m
 
 Host forside
     HostName xn--sb-lka.org
@@ -17,6 +26,10 @@ Host forside
 
 Host hetzner
     HostName 95.216.212.222
+    User root
+
+Host matrix
+    HostName 135.181.35.20
     User root
 
 Host pyjamas
