`ip` with color

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,6 @@
 Include config.d/*
 
 Host *
-    Protocol 2
     ServerAliveInterval 25
 
     # Check SSHFP DNS record
@@ -41,3 +40,7 @@ Host pfbitter
     HostName ssh.phx.nearlyfreespeech.net
     User nicolais_pfbitter
     IdentityFile ~/.ssh/id_rsa-old
+
+Host hackerlab
+    HostName 192.168.234.145
+    User hackerlab
