--- a/.ssh/config
+++ b/.ssh/config
@@ -12,7 +12,14 @@ Host *
     # Remove bad ciphers from default list
     HostKeyAlgorithms -ssh-rsa
     # MACs without "-etm" will do mac-then-encrypt
-    MACs -umac-64-etm@openssh.com,hmac-sha1-etm@openssh.com,umac-64@openssh.com,umac-128@openssh.com,hmac-sha2-256,hmac-sha2-512,hmac-sha1
+    #MACs -umac-64-etm@openssh.com,hmac-sha1-etm@openssh.com,umac-64@openssh.com,umac-128@openssh.com,hmac-sha2-256,hmac-sha2-512,hmac-sha1
+    MACs hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,umac-128-etm@openssh.com
+
+    # Basically just remove CBC mode
+    Ciphers chacha20-poly1305@openssh.com,aes128-gcm@openssh.com,aes256-gcm@openssh.com
+
+    # TPM
+    PKCS11Provider /usr/lib/x86_64-linux-gnu/libtpm2_pkcs11.so.1
 
     # SSH Multiplexing
     #ControlPath ~/.ssh/controlmasters/%r@%h:%p
@@ -34,11 +41,6 @@ Host matrix
 Host pyjamas
     HostName pyjam.as
     User nsq
-    IdentityFile ~/.ssh/id_rsa-old
-
-Host pfbitter
-    HostName ssh.phx.nearlyfreespeech.net
-    User nicolais_pfbitter
     IdentityFile ~/.ssh/id_rsa-old
 
 Host hackerlab
