--- a/.ssh/config
+++ b/.ssh/config
@@ -10,39 +10,35 @@ Host *
     SetEnv TERM=xterm-256color
 
     # Remove bad ciphers from default list
-    HostKeyAlgorithms -ssh-rsa
-    # MACs without "-etm" will do mac-then-encrypt
-    #MACs -umac-64-etm@openssh.com,hmac-sha1-etm@openssh.com,umac-64@openssh.com,umac-128@openssh.com,hmac-sha2-256,hmac-sha2-512,hmac-sha1
     MACs hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,umac-128-etm@openssh.com
 
-    # Basically just remove CBC mode
+    # Remove CBC mode
     Ciphers chacha20-poly1305@openssh.com,aes128-gcm@openssh.com,aes256-gcm@openssh.com
 
     # TPM
     PKCS11Provider /usr/lib/x86_64-linux-gnu/libtpm2_pkcs11.so.1
 
     # SSH Multiplexing
-    #ControlPath ~/.ssh/controlmasters/%r@%h:%p
-    #ControlMaster auto
-    #ControlPersist 10m
+    ControlPath ~/.ssh/controlmasters/%r@%h:%p
+    ControlMaster auto
+    ControlPersist 5m
 
 Host forside
-    HostName xn--sb-lka.org
+    Hostname xn--sb-lka.org
     User root
 
 Host hetzner
-    HostName 95.216.212.222
+    Hostname 95.216.212.222
     User root
 
 Host matrix
-    HostName 135.181.35.20
+    Hostname 135.181.35.20
     User root
 
 Host pyjamas
-    HostName pyjam.as
-    User nsq
-    IdentityFile ~/.ssh/id_rsa-old
+    Hostname pyjam.as
+    User nicolai
 
 Host hackerlab
-    HostName 192.168.234.145
+    Hostname 192.168.234.145
     User hackerlab
