matrix: change port 22 => 2222

--- a/.ssh/config
+++ b/.ssh/config
@@ -25,6 +25,7 @@ Host *
 
 Host forside
     Hostname xn--sb-lka.org
+    Port 2222
     User root
 
 Host hetzner
@@ -32,12 +33,17 @@ Host hetzner
     User root
 
 Host matrix
-    Hostname 135.181.35.20
+    Hostname matrix.xn--sb-lka.org
+    Port 2222
     User root
 
 Host pyjamas
     Hostname pyjam.as
     User nicolai
+
+Host files
+    Hostname files.xn--sb-lka.org
+    Port 2022
 
 Host hackerlab
     Hostname 192.168.234.145
