--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,4 +57,4 @@ bind p paste-buffer
 # Install: git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
