ssh config: cleanup new server

--- a/.ssh/config
+++ b/.ssh/config
@@ -26,15 +26,10 @@ Host *
 Host forside
     Hostname xn--sb-lka.org
     Port 2222
-    User root
+    User nicolai
 
 Host hetzner
     Hostname 95.216.212.222
-    User root
-
-Host matrix
-    Hostname matrix.xn--sb-lka.org
-    Port 2222
     User root
 
 Host pyjamas
