Disable libtpm2 + add ns13

--- a/.ssh/config
+++ b/.ssh/config
@@ -16,7 +16,7 @@ Host *
     Ciphers chacha20-poly1305@openssh.com,aes128-gcm@openssh.com,aes256-gcm@openssh.com
 
     # TPM
-    PKCS11Provider /usr/lib/x86_64-linux-gnu/libtpm2_pkcs11.so.1
+    #PKCS11Provider /usr/lib/x86_64-linux-gnu/libtpm2_pkcs11.so.1
 
     # SSH Multiplexing
     ControlPath ~/.ssh/controlmasters/%r@%h:%p
@@ -31,6 +31,11 @@ Host forside
 Host hetzner
     Hostname 95.216.212.222
     User root
+
+Host ns13
+    ProxyJump forside
+    Hostname 146.59.35.214
+    User ubuntu
 
 Host pyjamas
     Hostname pyjam.as
