Fix git `signingkey`. Aliases for mkvirtualenv

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,7 @@ Include config.d/*
 
 Host *
     ServerAliveInterval 25
+    AddKeysToAgent confirm
 
     # Check SSHFP DNS record
     VerifyHostKeyDNS yes
