nvim: yank to clipboard. `dns` ssh alias

--- a/.config/git/config
+++ b/.config/git/config
@@ -58,3 +58,6 @@
 [includeIf "gitdir:~/work/"]
 	path = ~/work/.gitconfig
 
+[submodule]
+	# Enable --recurse-submodules by default
+	recurse = true
