--- a/.ssh/config
+++ b/.ssh/config
@@ -33,11 +33,11 @@ Host hetzner
     Hostname 95.216.212.222
     User root
 
-Host ns13
-    ProxyJump forside
-    Hostname 146.59.35.214
+Host dns
+    #ProxyJump forside
+    Hostname 116.202.22.21
     Port 2222
-    User ubuntu
+    User nicolai
 
 Host pyjamas
     Hostname pyjam.as
@@ -46,6 +46,7 @@ Host pyjamas
 Host files
     Hostname files.xn--sb-lka.org
     Port 2022
+    User nsq
 
 Host hackerlab
     Hostname 192.168.234.145
